--- a/style.css
+++ b/style.css
@@ -1,25 +1,15 @@
 *{
     margin: 0;
     box-sizing: border-box;
+    color: rgb(255, 255, 255);
 }
-.header{
+.background{
     width: 100%;
     height: 100vh;
     background-color: black;
     background-size: cover;
 
     overflow-y: auto;
-}
-.title{
-    width:800px;
-    margin-left: auto;
-    margin-right: auto;
-}
-.fullscreen-ascii-image{
-    width: 1920px;
-    margin-right: auto;
-    margin-left: auto;
-    
 }
 .main-text{
     width: 100%;
@@ -37,5 +27,59 @@
     h1{
         color: rgb(56, 239, 111);
         font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
+    }
+}
+
+@media (min-width: 1921px) {
+
+}
+
+@media (width: 1920px) {
+
+}
+
+/*Visione schermi pc piccoli*/
+@media (min-width: 1280px) and (max-width: 1919px) {
+    
+    .header{
+        width: 100%;
+        height: fit-content;
+        align-items: start;
+        justify-items: stretch;
+        padding: 10px 10px;
+        overflow-x: hidden;
+
+        background-color: rgb(0, 0, 0);
+    }
+    .title{
+        width:800px;
+        margin-left: auto;
+        margin-right: auto;
+        font-size: medium;
+    }
+    .fullscreen-ascii-image{
+        width: 1920px;
+        margin-right: auto;
+        margin-left: auto;
+        
+    }
+    
+}
+
+@media (min-width: 768px) and (max-width: 1279px) {
+    .title{
+        width:590px;
+        margin-left: auto;
+        margin-right: auto;
+        font-size: x-small;
+    }
+}
+
+@media (max-width: 767px) {
+    .title{
+        width:410px;
+        margin-left: auto;
+        margin-right: auto;
+        font-size: 7px;
     }
 }
