--- a/style.css
+++ b/style.css
@@ -8,19 +8,22 @@
     height: 100vh;
     background-color: black;
     background-size: cover;
+    
 
     overflow-y: auto;
 }
 .main-text{
     width: 100%;
     height: 100%;
-    position: fixed;
-    /*top: 50px;*/
+    position: absolute;
+    top:0;
 
-    padding: 10px 10px;
+    padding: 35px 10px;
     overflow-y:auto;
     overflow-x:hidden;
+    z-index: -1;
 
+    background-color: black;
     /*text color I think*/
     color: white;
 
@@ -29,25 +32,32 @@
         font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
     }
 }
+.header {
+    z-index: 1;
+    background-color: rgba(0, 0, 0, 0.44);
+    backdrop-filter: blur(5px);
+}
 
 @media (min-width: 1921px) {
 
 }
 
 @media (width: 1920px) {
-
+    
 }
 
 /*Visione schermi pc piccoli*/
 @media (min-width: 1280px) and (max-width: 1919px) {
     
     .header{
+        display: block;
         width: 100%;
         height: fit-content;
         align-items: start;
         justify-items: stretch;
         padding: 10px 10px;
         overflow-x: hidden;
+        z-index: 1;
 
         background-color: rgb(0, 0, 0);
     }
