--- a/style.css
+++ b/style.css
@@ -33,39 +33,34 @@
     }
 }
 .header {
+    width: 100%;
+    height: fit-content;
+    align-items: start;
+    justify-items: stretch;
+    overflow-x: hidden;
     z-index: 1;
-    background-color: rgba(0, 0, 0, 0.44);
-    backdrop-filter: blur(5px);
+    background-color: rgba(0, 0, 0, 0.7);
+    backdrop-filter: blur(7px);
+    padding: 10px 0px;
 }
 
 @media (min-width: 1921px) {
-
-}
-
-@media (width: 1920px) {
-    
-}
-
-/*Visione schermi pc piccoli*/
-@media (min-width: 1280px) and (max-width: 1919px) {
-    
-    .header{
-        display: block;
-        width: 100%;
-        height: fit-content;
-        align-items: start;
-        justify-items: stretch;
-        padding: 10px 10px;
-        overflow-x: hidden;
-        z-index: 1;
-
-        background-color: rgb(0, 0, 0);
-    }
     .title{
         width:800px;
         margin-left: auto;
         margin-right: auto;
         font-size: medium;
+        background-color: aqua;
+    }
+}
+
+/*Visione schermi pc piccoli*/
+@media (min-width: 1280px) and (max-width: 1920px) {
+    .title{
+        width:700px;
+        margin-left: auto;
+        margin-right: auto;
+        font-size: 13px;
     }
     .fullscreen-ascii-image{
         width: 1920px;
