--- a/style.css
+++ b/style.css
@@ -4,14 +4,17 @@
     color: rgb(255, 255, 255);
 }
 .background{
-    width: 100%;
+    width: 100vw;
     height: 100vh;
-    background-color: black;
+    background-color: rgb(0, 0, 0);
     background-size: cover;
-    
+    position:fixed;
+    margin-top: 0;
+    z-index: -1;
 
-    overflow-y: auto;
+    overflow-y: none;
 }
+
 .main-text{
     width: 100%;
     height: 100%;
@@ -42,6 +45,56 @@
     background-color: rgba(0, 0, 0, 0.7);
     backdrop-filter: blur(7px);
     padding: 10px 0px;
+}
+.boxed{
+    height: fit-content;
+    width: 100%;
+    outline: 1px;
+    outline-style: none;
+    outline-color: rgb(255, 255, 255);
+    padding: 10px;
+
+    display: grid;
+    justify-items: center;
+}
+.centered-list{
+    height: auto;
+    width: auto;
+    margin-left: 10vw;
+    margin-right: 10vw;
+    margin-top: 20vh;
+    background-color: rgba(255, 255, 255, 0.108);
+    padding: 20px;
+
+    overflow-y: auto;
+
+    a{
+        text-decoration: none;
+    }
+
+    a.button {
+        background-color: rgb(9, 9, 9);
+        height: fit-content;
+        width: 100%;
+        outline: 1px;
+        outline-style: solid;
+        outline-color: rgb(0, 0, 0);
+        padding: 10px;
+
+        display: grid;
+        justify-items: center;
+    }
+    a.button:hover{
+        box-shadow: inset -8px -8px 9px rgba(255, 255, 255, 0.085), inset 4px 4px 6px rgba(255, 255, 255, 0.263);
+
+    }
+
+    img{
+        border-radius: 10px;
+    }
+}
+.center-items{
+    width:fit-content;
 }
 
 @media (min-width: 1921px) {
